--- a/School/WebApplication1/Views/KhachHang/Index.cshtml
+++ b/School/WebApplication1/Views/KhachHang/Index.cshtml
@@ -1,83 +1,72 @@
-﻿@model List<StoreManagement.Dtos.KhachHangDto>
+﻿@model IEnumerable<StoreManagement.Dtos.KhachHangDto>
+
 @{
-    ViewData["Title"] = "Khách hàng";
+    ViewData["Title"] = "List";
     Layout = "~/Views/Shared/_Layout.cshtml";
-
-    Pager pager = new Pager();
-
-    int pageNo = 0;
-    if (ViewBag.Pager != null)
-    {
-        pager = ViewBag.Pager;
-        pageNo = pager.CurrentPage;
-    }
 }
-
 <div class="row">
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Khách hàng</h4>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h4 class="card-title">Khách Hàng Table</h4>
+                    </div>
+                    <div class="update col-md-4">
+                        <button type="submit" class="btn btn-primary btn-round pull-right">Thêm mới</button>
+                    </div>
+                </div>
             </div>
-            <button style="padding: 10px 10px; background: yellow "><a href="/KhachHang/Add/">Add</a></button>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table tbl-contents">
                         <thead class=" text-primary">
-                        <th>
-                            Id
-                        </th>
-                        <th>
-                            Tên Khách Hàng
-                        </th>
-                        <th>
-                            Email
-                        </th>
-                        <th>
-                            Mật Khẩu
-                        </th>
-                        <th>
-                            RandomKey
-                        </th>
-                        <th>
-                            Edit
-                        </th>
-                        <th>
-                            Delete
-                        </th>
-
-                        </thead>
-
+                            <tr>
+                                <th>
+                                    Id
+                                </th>
+                                <th>
+                                    Tên Khách Hàng
+                                </th>
+                                <th>
+                                    Email
+                                </th>
+                                <th>
+                                    RandomKey
+                                </th>
+                            </tr>
                         <tbody>
-                            @*@await Html.PartialAsync("Pagination")*@
-
-                            @{
-                                foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td>@item.Id</td>
-                                        <td>@item.HoTen</td>
-                                        <td>@item.Email</td>
-                                        <td>@item.MatKhau</td>
-                                        <td>@item.RandomKey</td>
-
-                                        <td>
-                                            <button style="background: yellow"><a href="/KhachHang/Edit/@item.Id">Edit</a></button>
-                                        </td>
-                                        <td>
-                                            <button style="background: yellow"><a href="/KhachHang/Delete/@item.Id">Delete</a></button>
-                                        </td>
-                                    </tr>
-                                }
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Id)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.HoTen)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Email)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.RandomKey)
+                                    </td>
+                                    <td>
+                                        <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
+                                        <a asp-action="Details" asp-route-id="@item.Id"><i class="nc-icon nc-spaceship"></i></a> |
+                                        <a asp-action="Delete" asp-route-id="@item.Id"><i class="nc-icon nc-simple-remove"></i></a>
+                                    </td>
+                                </tr>
                             }
                         </tbody>
-
                     </table>
-                    @await Html.PartialAsync("Pagination")
-
                 </div>
             </div>
         </div>
     </div>
+</div>
+<div style="margin: 0 auto">
+
+    @await Html.PartialAsync("Pagination")
 </div>
 
