--- a/School/WebApplication1/Views/HangHoa/Index.cshtml
+++ b/School/WebApplication1/Views/HangHoa/Index.cshtml
@@ -1,75 +1,84 @@
 ﻿@model List<HangHoaModel>
+
 @{
-    ViewData["Title"] = "Hàng Hóa";
+    ViewData["Title"] = "List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="row">
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Hàng Hóa</h4>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h4 class="card-title">Hàng Hóa Table</h4>
+                    </div>
+                    <div class="update col-md-4">
+                        <button type="submit" class="btn btn-primary btn-round pull-right">Thêm mới</button>
+                    </div>
+                </div>
             </div>
-
-            <button style="padding: 10px 10px; background: yellow "><a href="/HangHoa/Add/">Add</a></button>
-
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table tbl-contents">
                         <thead class=" text-primary">
-                        <th>
-                            Id
-                        </th>
-                        <th>
-                            Tên Hàng Hóa
-                        </th>
-                        <th>
-                            Số Lượng
-                        </th>
-                        <th>
-                            Đơn giá
-                        </th>
-                        <th>
-                            Giảm giá
-                        </th>
-                        <th>
-                            Chi Tiết
-                        </th>
-                        <th>
-                            Edit
-                        </th>
-                        <th>
-                            Delete
-                        </th>
-
-                        </thead>
-                        @*@await Html.PartialAsync("Pagination")*@
+                            <tr>
+                                <th>
+                                    Id
+                                </th>
+                                <th>
+                                    Tên Hàng Hóa
+                                </th>
+                                <th>
+                                    Số Lượng
+                                </th>
+                                <th>
+                                    Đơn giá
+                                </th>
+                                <th>
+                                    Giảm giá
+                                </th>
+                                <th>
+                                    Chi Tiết
+                                </th>
+                            </tr>
                         <tbody>
-                            @{
-                                foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td>@item.Id</td>
-                                        <td>@item.TenHH</td>
-                                        <td>@item.SoLuong</td>
-                                        <td>@item.DonGia</td>
-                                        <td>@item.GiamGia</td>
-                                        <td>@item.ChiTiet</td>
-
-                                        <td>
-                                            <button style="background: yellow"><a href="/HangHoa/Edit/@item.Id">Edit</a></button>
-                                        </td>
-                                        <td>
-                                            <button style="background: yellow"><a href="/HangHoa/Delete/@item.Id">Delete</a></button>
-                                        </td>
-                                    </tr>
-                                }
+                            @foreach (var item in Model)
+                            {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Id)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TenHH)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.SoLuong)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DonGia)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.GiamGia)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ChiTiet)
+                                </td>
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
+                                    <a asp-action="Details" asp-route-id="@item.Id"><i class="nc-icon nc-spaceship"></i></a> |
+                                    <a asp-action="Delete" asp-route-id="@item.Id"><i class="nc-icon nc-simple-remove"></i></a>
+                                </td>
+                            </tr>
                             }
                         </tbody>
                     </table>
-                    @await Html.PartialAsync("Pagination")
                 </div>
-
             </div>
         </div>
     </div>
 </div>
+<div style="margin: 0 auto">
+
+    @await Html.PartialAsync("Pagination")
+</div>
+
