--- a/School/WebApplication1/Views/Loai/Index.cshtml
+++ b/School/WebApplication1/Views/Loai/Index.cshtml
@@ -1,261 +1,71 @@
 ﻿@model List<LoaiModel>
+
 @{
-    ViewData["Title"] = "Loại";
+    ViewData["Title"] = "List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="row">
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Loại</h4>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h4 class="card-title">Loại Table</h4>
+                    </div>
+                    <div class="update col-md-4">
+                        <button type="submit" class="btn btn-primary btn-round pull-right">Thêm mới</button>
+                    </div>
+                </div>
             </div>
-            <button style="padding: 10px 10px; background: yellow "><a href="/Loai/Add/">Add</a></button>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table tbl-contents">
                         <thead class=" text-primary">
-                        <th>
-                            Id
-                        </th>
-                        <th>
-                            Tên Loại
-                        </th>
-                        <th>
-                            Mô Tả
-                        </th>
-                        <th>
-                            Mã Loại Cha
-                        </th>
-                        <th>
-                            Edit
-                        </th>
-                        <th>
-                            Delete
-                        </th>
-
-                        </thead>
+                            <tr>
+                                <th>
+                                    Id
+                                </th>
+                                <th>
+                                    Tên Loại
+                                </th>
+                                <th>
+                                    Mô Tả
+                                </th>
+                                <th>
+                                    Mã Loại Cha
+                                </th>
+                            </tr>
                         <tbody>
-                            @*@await Html.PartialAsync("Pagination")*@
-                            @{
-                                foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td>@item.Id</td>
-                                        <td>@item.TenLoai</td>
-                                        <td>@item.Mota</td>
-                                        <td>@item.MaLoaiCha</td>
-
-                                        <td>
-                                            <button style="background: yellow"><a href="/Loai/Edit/@item.Id">Edit</a></button>
-                                        </td>
-                                        <td>
-                                            <button style="background: yellow"><a href="/Loai/Delete/@item.Id">Delete</a></button>
-                                        </td>
-                                    </tr>
-                                }
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Id)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.TenLoai)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Mota)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.MaLoaiCha)
+                                    </td>
+                                    <td>
+                                        <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
+                                        <a asp-action="Details" asp-route-id="@item.Id"><i class="nc-icon nc-spaceship"></i></a> |
+                                        <a asp-action="Delete" asp-route-id="@item.Id"><i class="nc-icon nc-simple-remove"></i></a>
+                                    </td>
+                                </tr>
                             }
                         </tbody>
                     </table>
-                    @await Html.PartialAsync("Pagination")
                 </div>
-               
             </div>
         </div>
     </div>
 </div>
+<div style="margin: 0 auto">
 
-
-@*@model List<LoaiModel>
-
-    @{
-        ViewData["Title"] = "Loại";
-        Layout = "~/Views/Shared/_Layout.cshtml";
-    }  <div class="content">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card card-user">
-                    <div class="image">
-                        <img src="../assets/img/damir-bosnjak.jpg" alt="...">
-                    </div>
-                    <div class="card-body">
-                        <div class="author">
-                            <a href="#">
-                                <img class="avatar border-gray" src="../assets/img/mike.jpg" alt="...">
-                                <h5 class="title">Chet Faker</h5>
-                            </a>
-                            <p class="description">
-                                I wanna bag it up"
-                            </p>
-                        </div>
-                        <p class="description text-center">
-                            "I like the way you work it <br>
-                            No diggity <br>
-                            I wanna bag it up"
-                        </p>
-                    </div>
-                    <div class="card-footer">
-                        <hr>
-                        <div class="button-container">
-                            <div class="row">
-                                <div class="col-lg-3 col-md-6 col-6 ml-auto">
-                                    <h5>12<br><small>Files</small></h5>
-                                </div>
-                                <div class="col-lg-4 col-md-6 col-6 ml-auto mr-auto">
-                                    <h5>2GB<br><small>Used</small></h5>
-                                </div>
-                                <div class="col-lg-3 mr-auto">
-                                    <h5>24,6$<br><small>Spent</small></h5>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-header">
-                        <h4 class="card-title">Team Members</h4>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-unstyled team-members">
-                            <li>
-                                <div class="row">
-                                    <div class="col-md-2 col-2">
-                                        <div class="avatar">
-                                            <img src="../assets/img/faces/ayo-ogunseinde-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-7 col-7">
-                                        DJ Khaled
-                                        <br />
-                                        <span class="text-muted"><small>Offline</small></span>
-                                    </div>
-                                    <div class="col-md-3 col-3 text-right">
-                                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="row">
-                                    <div class="col-md-2 col-2">
-                                        <div class="avatar">
-                                            <img src="../assets/img/faces/joe-gardner-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-7 col-7">
-                                        Creative Tim
-                                        <br />
-                                        <span class="text-success"><small>Available</small></span>
-                                    </div>
-                                    <div class="col-md-3 col-3 text-right">
-                                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="row">
-                                    <div class="col-md-2 col-2">
-                                        <div class="avatar">
-                                            <img src="../assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                                        </div>
-                                    </div>
-                                    <div class="col-ms-7 col-7">
-                                        Flume
-                                        <br />
-                                        <span class="text-danger"><small>Busy</small></span>
-                                    </div>
-                                    <div class="col-md-3 col-3 text-right">
-                                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-8">
-                <div class="card card-user">
-                    <div class="card-header">
-                        <h5 class="card-title">Edit Profile</h5>
-                    </div>
-                    <div class="card-body">
-                        <form>
-                            <div class="row">
-                                <div class="col-md-5 pr-1">
-                                    <div class="form-group">
-                                        <label>Company (disabled)</label>
-                                        <input type="text" class="form-control" disabled="" placeholder="Company" value="Creative Code Inc.">
-                                    </div>
-                                </div>
-                                <div class="col-md-3 px-1">
-                                    <div class="form-group">
-                                        <label>Username</label>
-                                        <input type="text" class="form-control" placeholder="Username" value="michael23">
-                                    </div>
-                                </div>
-                                <div class="col-md-4 pl-1">
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Email address</label>
-                                        <input type="email" class="form-control" placeholder="Email">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 pr-1">
-                                    <div class="form-group">
-                                        <label>First Name</label>
-                                        <input type="text" class="form-control" placeholder="Company" value="Chet">
-                                    </div>
-                                </div>
-                                <div class="col-md-6 pl-1">
-                                    <div class="form-group">
-                                        <label>Last Name</label>
-                                        <input type="text" class="form-control" placeholder="Last Name" value="Faker">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label>Address</label>
-                                        <input type="text" class="form-control" placeholder="Home Address" value="Melbourne, Australia">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4 pr-1">
-                                    <div class="form-group">
-                                        <label>City</label>
-                                        <input type="text" class="form-control" placeholder="City" value="Melbourne">
-                                    </div>
-                                </div>
-                                <div class="col-md-4 px-1">
-                                    <div class="form-group">
-                                        <label>Country</label>
-                                        <input type="text" class="form-control" placeholder="Country" value="Australia">
-                                    </div>
-                                </div>
-                                <div class="col-md-4 pl-1">
-                                    <div class="form-group">
-                                        <label>Postal Code</label>
-                                        <input type="number" class="form-control" placeholder="ZIP Code">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label>About Me</label>
-                                        <textarea class="form-control textarea">Oh so, your weak rhyme You doubt I'll bother, reading into it</textarea>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="update ml-auto mr-auto">
-                                    <button type="submit" class="btn btn-primary btn-round">Update Profile</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>*@
+    @await Html.PartialAsync("Pagination")
+</div>
