--- a/School/WebApplication1/Views/Shared/_Navbar.cshtml
+++ b/School/WebApplication1/Views/Shared/_Navbar.cshtml
@@ -1,38 +1,4 @@
-﻿@using StoreManagement.Dtos.Params
-@*<header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-action="Index">Store</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/Loai/Index">Loai</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/KhachHang/Index">Khach Hang</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/HangHoa/Index">Hang Hoa</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/DonHang/Index">Don Hang</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/ChiTietDH/Index">Chi Tiet DH</a>
-                        </li>
-                    </ul>
-
-                </div>
-            </div>
-        </nav>
-    </header>*@
-
-
-<div class="sidebar" data-color="white" data-active-color="danger">
+﻿<div class="sidebar" data-color="white" data-active-color="danger">
     <div class="logo">
         <a href="https://www.creative-tim.com" class="simple-text logo-mini">
             <div class="logo-image-small">
@@ -93,18 +59,6 @@
                     <p>Chi Tiết Đơn Hàng</p>
                 </a>
             </li>
-            @*<li>
-            <a href="./typography.html">
-                <i class="nc-icon nc-caps-small"></i>
-                <p>Typography</p>
-            </a>
-        </li>
-        <li class="active-pro">
-            <a href="./upgrade.html">
-                <i class="nc-icon nc-spaceship"></i>
-                <p>Haha Hihi Hoho</p>
-            </a>
-        </li>*@
         </ul>
     </div>
 </div>
