--- a/School/WebApplication1/Views/Shared/Pagination.cshtml
+++ b/School/WebApplication1/Views/Shared/Pagination.cshtml
@@ -1,30 +1,21 @@
-﻿<nav aria-label="Page navigation example" style="margin-top: 0;">
+﻿@model Tuple<int, int>
+@{
+    var totalPages = Model.Item1 % Model.Item2 == 0 ? Model.Item1 / Model.Item2 : Model.Item1 / Model.Item2 + 1;
+
+}
+<nav aria-label="Page navigation example" style="margin-top: 0;">
+    <p class="pull-left">Total records: @Model.Item1</p>
     <ul class="pagination justify-content-end">
         <li class="page-item disabled">
             <a class="page-link" href="#" tabindex="-1">Previous</a>
         </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        @for (var i = 1; i <= totalPages; i++)
+        {
+            <li class="page-item"><a class="page-link" href="/ds-khach-hang?pageIndex=@i&pageSize=@Model.Item2">@i</a></li>
+        }
+
         <li class="page-item">
             <a class="page-link" href="#">Next</a>
         </li>
     </ul>
 </nav>
-
-
-
-
-@*<div class="container">
-    @if (pager.TotalPages > 0)
-    {
-        <ul class="pagination justify-content-end">
-            @for (var pge = pager.StartPage; pge < pager.EndPage; pge++)
-            {
-                <li class="page-item @(pge == pager.CurrentPage ? "active" : "")">
-                    <a class="page-link" asp-controller="KhachHang" asp-action="Index" asp-route-pg="@pge">@pge</a>
-                </li>
-            }
-        </ul>
-    }
-</div>*@
