--- a/School/WebApplication1/Views/Shared/_Navbar_Hor.cshtml
+++ b/School/WebApplication1/Views/Shared/_Navbar_Hor.cshtml
@@ -17,7 +17,7 @@
             <span class="navbar-toggler-bar navbar-kebab"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <form>
+            <form asp-action="List" asp-controller="KhachHang" asp-route-pageIndex="1" asp-route-pageSize="20" asp-route-name="Long">
                 <div class="input-group no-border">
                     <input type="text" value="" class="form-control" placeholder="Search...">
                     <div class="input-group-append">
